push data extractor

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,10 @@
             <input type="number" id="pieces" class="form-control mb-2" placeholder="Pieces" required>
             <button type="submit" class="btn btn-primary">Add Shirt</button>
         </form>
+
+        <input type="file" id="pdfInput">
+        <button onclick="uploadPdf()">uploadPDF</button>
+
         <table class="table mt-2 table-hover table-striped table-sm">
             <thead>
                 <tr>
