--- a/templates/index.html
+++ b/templates/index.html
@@ -7,15 +7,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
+
+    <div class="text-center">
+        <form action="/upload" method="POST" enctype="multipart/form-data">
+            <input type="file" name="file">
+            <input type="submit" value="Upload">
+        </form>
+    </div>
+
+
+
     <div class="container text-center">
         <h1 class="mb-3 mt-3">T-Shirt Inventory</h1>
-
-        <div>
-            <form action="/upload">
-                <input type="file" id = 'pdf'>
-                <input type="submit">
-            </form>
-        </div>
 
         <table class="table mt-2 table-hover table-striped table-sm">
                 
