--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
                 
                 <!-- table header -->
                 <tr>
+                    <th>Brand</th>
                     <th>Description</th>
                     <th>Color</th>
                     <th>Size</th>
@@ -38,6 +39,7 @@
                     <td>{{ row[1] }}</td>
                     <td>{{ row[2] }}</td>
                     <td>{{ row[3] }}</td>
+                    <td>{{ row[4] }}</td>
                 </tr>
                 {% endfor %}
         </table>
