--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 
     <!-- file upload -->
     <div class="text-center">
+        Upload S&S Invoice
         <form action="/upload" method="POST" enctype="multipart/form-data">
             <input type="file" name="file">
             <input type="submit" value="Upload">
