--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,6 @@
         </form>
     </div>
 
-
     <!-- table of shirts -->
     <div class="container text-center">
         <h1 class="mb-3 mt-3">T-Shirt Inventory</h1>
@@ -31,16 +30,29 @@
                     <th>Color</th>
                     <th>Size</th>
                     <th>Quantity</th>
+                    <th>Actions</th>
                 </tr>
 
                 <!-- data from pdf to rows -->
                 {% for row in shirts %}
                 <tr>
-                    <td>{{ row[0] }}</td>
                     <td>{{ row[1] }}</td>
                     <td>{{ row[2] }}</td>
                     <td>{{ row[3] }}</td>
                     <td>{{ row[4] }}</td>
+                    <td>{{ row[5] }}</td>
+                    <td>
+                        <form action="/update_quantity" method="POST" style="display: inline;">
+                            <input type="hidden" name="id" value="{{ row[0] }}">
+                            <input type="hidden" name="action" value="increment">
+                            <button type="submit" class="btn btn-sm btn-success">+</button>
+                        </form>
+                        <form action="/update_quantity" method="POST" style="display: inline;">
+                            <input type="hidden" name="id" value="{{ row[0] }}">
+                            <input type="hidden" name="action" value="decrement">
+                            <button type="submit" class="btn btn-sm btn-danger">-</button>
+                        </form>
+                    </td>
                 </tr>
                 {% endfor %}
         </table>
