--- a/templates/index.html
+++ b/templates/index.html
@@ -110,8 +110,8 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark mb-4">
         <div class="container">
-            <a class="navbar-brand" href="/">
-                <i class="fas fa-tshirt me-2"></i>Trackr
+            <a class="navbar-brand" href="/home">
+                <i class="fas fa-tshirt me-2"></i>Trackr - S&S Activewear Inventory Management
             </a>
         </div>
     </nav>
