--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventory App</title>
+    <title>Inventory System</title>
 
     <!-- Import Bootstrap 5 CSS from CDN for responsive styling -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -14,7 +14,7 @@
     <div class="text-center">
 
         <!-- Section Header -->
-        <h2 class="mt-4">Upload S&S Invoice</h2>
+        <h2 class="mt-4">For S&S Invoice's:</h2>
 
         <!-- File upload form for submitting S&S invoice files -->
         <form action="/upload" method="POST" enctype="multipart/form-data">
@@ -24,7 +24,8 @@
             <!-- Submit button to upload the selected file -->
             <input type="submit" value="Upload">
         </form>
-    </div><br>
+        <hr>
+    </div>
 
     <div>
         
@@ -46,7 +47,7 @@
             <input type="text" id='size' name='size'><br><br>
 
             <label>Quantity</label>
-            <input type="text" id='quantity' name='quantity'><br><br>
+            <input type="text" id='quantity' name='quantity' required><br><br>
 
             
 
@@ -54,6 +55,8 @@
             <input type='submit' value="Submit"</input>
         </form>
     </div>
+    
+    <hr>
 
     <!-- ==================== Inventory Table Section ==================== -->
     <div class="container text-center">
