--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
         <!-- File upload form for submitting S&S invoice files -->
         <form action="/upload" method="POST" enctype="multipart/form-data">
             <!-- File input field for selecting a file -->
-            <input class="form-control w-50 mx-auto my-2" type="file" name="file">
+            <input class="form-control w-50 mx-auto my-2" type="file" name="file" accept="application/pdf">
 
             <!-- Submit button to upload the selected file -->
             <input class="btn btn-secondary" type="submit" value="Upload">
