--- a/templates/registration.html
+++ b/templates/registration.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Login</title>
+    <title>Registration</title>
 </head>
 <body class="container">
     <div class="row">
         <div class="col-md-8">
-            <h1>Login</h1>
+            <h1>Registration</h1>
 
-            <form action="/login" method='POST'>
+            <form action="/register" method='POST'>
 
                 <!-- Username div -->
                 <div>
