Add landing page & route everythig accoridngly to work with it

--- a/templates/register.html
+++ b/templates/register.html
@@ -61,6 +61,12 @@
                 <!-- Submit Button -->
                 <input type="submit" value="Submit">
 
+                <div class="text-center my-2">
+                    <h5>
+                        <a href="{{ url_for('login') }}">Login Here</a>
+                    </h5>
+                </div>
+
             </form>
 
         </div>
