--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Login</title>
+
 </head>
 <body class="container">
     <div class="row">
@@ -41,6 +42,13 @@
 
                 <!-- Submit Button -->
                 <input type="submit" value="Submit">
+
+
+                <div class="text-center my-2">
+                    <h5>
+                        <a href="{{ url_for('register') }}">Register Here</a>
+                    </h5>
+                </div>
 
             </form>
         </div>
